[package]
name = "pulsejet-rs"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Rust port of yupferris' audio codec Pulsejet"
repository = "https://github.com/Shadlock0133/pulsejet-rs"
exclude = ["roundtrip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
